fix(Button): fixed contrast of the switch button

--- a/frontend/src/components/button/styles.css
+++ b/frontend/src/components/button/styles.css
@@ -13,7 +13,7 @@
     border-radius: 35px;
     width: max-content;
     height: max-content;
-    border: 1px solid grey;
+    border: 1px solid #e5e7eb;
   }
   
   .ToggleItem {
